--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This is a Website Dedicated to Solving Math Problems-Don't Ban or Else You Will Be Sent To Hell...">
+    <meta name="description" content="Classlink">
     <meta name="keywords" content="Games,Unblocked Games,">
     <meta name="author" content="AASMS">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
 
       <body>
          <div class="heading">
-          <h1><span style="color: red;"><strong>This is a Website Dedicated to Solving Math Problems-Don't Ban or Else You Will Be Sent To Hell...</strong></span></h1>
+          <h1><span style="color: blue;"><strong>AASMS Unblocked Games</strong></span></h1>
            <br>
-           <p1><span style="color: green;">Tired of Searching For Unblockers? Just Make Them lol.</span></p1>
+           <p1><span style="color: cyan;">Tired of Searching For Unblockers? Just Make Them.</span></p1>
          </div>
         <br><br><br><br>
         <div>
@@ -27,7 +27,7 @@
           <br><br>
           <a href="boxingrandom">Boxing Random</a>
           <br><br>
-          <a href="factoryballsforever">Factory Balls Forever</a>
+          <a href="1v1.lol">1v1.lol (Practice Only)</a>
           <br><br>
           <a href="fireboyandwatergirlintheforesttemple">Fireboy and Watergirl in the Forest Temple</a>
           <br><br>
