--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
       <body>
          <div class="heading">
+              <body bgcolor="#000840">
           <h1><span style="color: blue;"><strong>AASMS Unblocked Games</strong></span></h1>
            <br>
            <p1><span style="color: cyan;">Tired of Searching For Unblockers? Just Make Them.</span></p1>
