--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <h1><span style="color: blue;"><strong>AASMS Unblocked Games</strong></span></h1>
            <br>
            <p1><span style="color: cyan;">Tired of Searching For Unblockers? Just Make Them.</span></p1>
+           <video src="AASMSvideo.mp4" height="350"> 
          </div>
         <br><br><br><br>
         <div>
