--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <iframe src="AASMSvid.mp4" style="height:200px;width:300px;" title="Iframe Example"></iframe>
           <center>
 
-              <iframe src=PCcrasher.png></iframe>
+              <iframe src=exe.jpg></iframe>
           </center>
         <br><br><br><br>
         <div>
