--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <body>
          <div class="heading">
               <body bgcolor="#000840">
-          <h1><span style="color: blue;"><strong>AASMS Unblocked Games</strong></span></h1>
+          <h1><span style="color: blue;"><strong>SMS Unblocked Games</strong></span></h1>
            <br>
            <p1><span style="color: cyan;">Tired of Searching For Unblockers? Just Make Them.</span></p1>
          </div>
-          <iframe src="AASMSvid.mp4" style="height:200px;width:300px;" title="Iframe Example"></iframe>
+          <iframe src="AASMSvid.mp4" style="height:180px;width:303px;" title="Iframe Example"></iframe>
           <center>
 
               <iframe src=exe.jpg></iframe>
