--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <iframe src="AASMSvid.mp4" style="height:180px;width:303px;" title="Iframe Example"></iframe>
           <center>
 
-              <iframe src=exe.jpg></iframe>
+              <iframe src="exe.jpg" style="height="4000px;width:4000px"></iframe>
           </center>
         <br><br><br><br>
         <div>
