--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <br><br><br><br>
         <div>
           <h3><span style="color: yellow;"><strong>"The Math Websites"</strong></span></h3>
+               <style>
+body {
+  background-image: url('exe.jpg');
+}
           <br>
           <a href="10minutestilldawn">10 Minutes Till Dawn</a>
           <br><br>
