--- a/index.html
+++ b/index.html
@@ -197,6 +197,53 @@ body {
           <br><br>
           <a href="worldshardestgame2">World's Hardest Game 2</a>
           <br><br>
+          <a href="boxingrandom">Boxing Random</a>
+          <br><br>
+          <a href="1v1.lol">1v1.lol (Practice Only)</a>
+          <br><br>
+          <a href="fireboyandwatergirlintheforesttemple">Fireboy and Watergirl in the Forest Temple</a>
+          <br><br>
+          <a href="flappybird">Flappy Bird</a>
+          <br><br>
+          <a href="friendlyfire">Friendly Fire</a>
+          <br><br>
+          <a href="geometrydash">Geometry Dash</a>
+          <br><br>
+          <a href="gopherkart">Gopher Kart</a>
+          <br><br>
+          <a href="racer">Racer</a>
+          <br><br>
+          <a href="boxingrandom">Boxing Random</a>
+          <br><br>
+          <a href="1v1.lol">1v1.lol (Practice Only)</a>
+          <br><br>
+          <a href="fireboyandwatergirlintheforesttemple">Fireboy and Watergirl in the Forest Temple</a>
+          <br><br>
+          <a href="flappybird">Flappy Bird</a>
+          <br><br>
+          <a href="friendlyfire">Friendly Fire</a>
+          <br><br>
+          <a href="geometrydash">Geometry Dash</a>
+          <br><br>
+          <a href="gopherkart">Gopher Kart</a>
+          <br><br>
+          <a href="racer">Racer</a>
+          <br><br>
+          <a href="boxingrandom">Boxing Random</a>
+          <br><br>
+          <a href="1v1.lol">1v1.lol (Practice Only)</a>
+          <br><br>
+          <a href="fireboyandwatergirlintheforesttemple">Fireboy and Watergirl in the Forest Temple</a>
+          <br><br>
+          <a href="flappybird">Flappy Bird</a>
+          <br><br>
+          <a href="friendlyfire">Friendly Fire</a>
+          <br><br>
+          <a href="geometrydash">Geometry Dash</a>
+          <br><br>
+          <a href="gopherkart">Gopher Kart</a>
+          <br><br>
+          <a href="racer">Racer</a>
         </div>
         <p>All Created By Dezion Abdul Abbas Kabbom 9/11 Kakari Longtin </p>
 
